

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

        
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin"
         >
         
        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/row_margin"
                 android:layout_marginRight="@dimen/row_margin"
                 android:layout_marginTop="@dimen/row_margin"
                 android:orientation="horizontal"
                 android:paddingBottom="@dimen/padding_medium" >
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_weight="1.0"
            android:gravity="right|bottom"/>
                
        <ImageView
                android:id="@+id/advanceSearchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/advance_search"
                android:gravity="right"/>
        
    </LinearLayout>
            
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_margin" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight=".03"
                android:maxEms="1"
                android:text="@string/label_star"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/mandatory_star_color" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".39"
                android:text="@string/label_first_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textfontsize" />

            <EditText
                android:id="@+id/edtfirstname"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/textfontsize" >

               
            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_margin" >

             <TextView
                
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_weight=".03"
                 android:maxEms="1"
                 android:text="@string/label_star"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/mandatory_star_color" />

            <TextView
               
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".39"
                android:text="@string/label_last_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textfontsize" />

            <EditText
                android:id="@+id/edtlastname"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/textfontsize" >

             
            </EditText>
        </TableRow>

       

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_margin" >
            
                     <TextView
              
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight=".03"
                android:text="@string/label_star"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/mandatory_star_color" />

            <TextView
               
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".39"
                android:text="@string/label_dob"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textfontsize" />

			<LinearLayout
			    android:layout_weight=".6"
			     android:layout_width="0dip"
                android:layout_height="wrap_content"
			    android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtdob"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_date"
                android:inputType="date"
                android:textSize="@dimen/textfontsize" />

            <ImageButton
                android:id="@+id/imgDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/calender_desc"
                android:src="@android:drawable/ic_menu_my_calendar" />
            </LinearLayout>
           
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_margin" >
            
               <TextView
               
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight=".03"
                android:text="@string/label_star"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/mandatory_star_color" />

            <TextView
               
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".39"
                android:text="@string/label_sex"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textfontsize" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radiomale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_male"
                    android:textSize="@dimen/textfontsize" />

                <RadioButton
                    android:id="@+id/radiofemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_female"
                    android:textSize="@dimen/textfontsize" />

            </RadioGroup>
            
        </TableRow>

         <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_margin" >

             <TextView
               
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_weight=".03"
                 android:maxEms="1"
                 android:text="@string/label_nostar"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/mandatory_star_color" />

            <TextView
         
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".39"
                android:text="@string/label_patient_id"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textfontsize" />

            <EditText
                android:id="@+id/edtpatientid"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:ems="10"
                android:hint="@string/hint_patient_id"
                android:inputType="textPersonName"
                android:textSize="@dimen/textfontsize" >

            </EditText>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_margin" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".03"
                android:gravity="top"
                android:text="@string/label_star"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/mandatory_star_color" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2dip"
                android:layout_weight=".39"
                android:gravity="center_vertical"
                android:text="@string/label_select_community"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/textfontsize" />
            
            <TextView
                android:id="@+id/edtCommunity"
                android:layout_width="0dip"
                android:layout_height="@dimen/spinner_height"
                android:layout_weight=".6"
                 android:background="@drawable/selectorbg"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/Community"
                android:textSize="@dimen/textfontsize" />

        </TableRow>

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/row_margin"
            			android:layout_marginRight="@dimen/row_margin"
            		 	android:layout_marginTop="@dimen/row_margin"
            		 	android:layout_marginBottom="@dimen/row_margin"
            		 
                 android:orientation="horizontal" >

                 <Button
                     android:id="@+id/btnsearchpatient"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/space_button"
                     android:layout_weight="0.5"
                     android:background="@drawable/btn_keyboard_key_dark_pressed_holo"
                     android:padding="@dimen/padding_large"
                     android:text="@string/search"
                     android:textSize="@dimen/textfontsize" />

                 <Button
                     android:id="@+id/btncancel"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:background="@drawable/btn_keyboard_key_dark_pressed_holo"
                     android:padding="@dimen/padding_large"
                     android:text="@string/Cancel"
                     android:textSize="@dimen/textfontsize" />

             </LinearLayout>
       
    </TableLayout>

    </ScrollView>
    


